[gd_scene load_steps=49 format=3 uid="uid://d46wrkgdeynk"]

[ext_resource type="Script" path="res://scripts/initialize.gd" id="1_xecma"]
[ext_resource type="Script" path="res://scripts/GameController.gd" id="2_42an5"]
[ext_resource type="Script" path="res://scripts/locomotion.gd" id="2_kvn2k"]
[ext_resource type="Texture2D" uid="uid://ki1hqej086hg" path="res://textures/stone_brick.webp" id="3_na154"]
[ext_resource type="PackedScene" uid="uid://dw2kfbg15qqeu" path="res://controllers/controller_l.fbx" id="3_y2kpf"]
[ext_resource type="PackedScene" uid="uid://doel0ns5nc6bm" path="res://controllers/controller_r.fbx" id="4_5ti0a"]
[ext_resource type="Script" path="res://scripts/camera_collision.gd" id="5_dknlb"]
[ext_resource type="Script" path="res://scripts/Door.gd" id="6_dubqk"]
[ext_resource type="Texture2D" uid="uid://corehclq0bswx" path="res://textures/sand.webp" id="6_idf5b"]
[ext_resource type="Script" path="res://scripts/Path.gd" id="7_ctd0p"]
[ext_resource type="Script" path="res://scripts/Map.gd" id="8_ct64q"]
[ext_resource type="Texture2D" uid="uid://cle2sjkres0xo" path="res://textures/netherportal_crop.png" id="9_30ele"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_blgdw"]
albedo_texture = ExtResource("3_na154")
uv1_scale = Vector3(10, 10, 10)

[sub_resource type="BoxMesh" id="BoxMesh_b2ccx"]
material = SubResource("StandardMaterial3D_blgdw")
size = Vector3(1, 3, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_nj0ms"]
size = Vector3(0.2, 0.2, 0.2)

[sub_resource type="BoxMesh" id="BoxMesh_yr38u"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_stxle"]

[sub_resource type="BoxMesh" id="BoxMesh_ku1ag"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7o7er"]
transparency = 1
albedo_color = Color(1, 1, 1, 0.196078)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x4sjt"]

[sub_resource type="PlaneMesh" id="PlaneMesh_aewtc"]
material = SubResource("ShaderMaterial_x4sjt")
size = Vector2(1, 1)

[sub_resource type="MultiMesh" id="MultiMesh_8l6sb"]
transform_format = 1
mesh = SubResource("PlaneMesh_aewtc")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r40be"]

[sub_resource type="PlaneMesh" id="PlaneMesh_8nhfb"]
material = SubResource("ShaderMaterial_r40be")
size = Vector2(1, 1)

[sub_resource type="MultiMesh" id="MultiMesh_saubh"]
transform_format = 1
mesh = SubResource("PlaneMesh_8nhfb")

[sub_resource type="SphereMesh" id="SphereMesh_td3q0"]
radius = 0.3
height = 0.6

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_88qy7"]
transparency = 1
albedo_color = Color(1, 1, 1, 0.196078)

[sub_resource type="BoxMesh" id="BoxMesh_t47kd"]
size = Vector3(0.05, 0.05, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_srtc7"]
transparency = 1
albedo_color = Color(1, 1, 1, 0.196078)

[sub_resource type="PlaneMesh" id="PlaneMesh_5j7vv"]
size = Vector2(10, 10)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_r55n5"]
transparency = 1
albedo_color = Color(0.65098, 0.678431, 0.529412, 0.117647)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_osj4q"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_noqmy"]
sky_material = SubResource("ProceduralSkyMaterial_osj4q")

[sub_resource type="Environment" id="Environment_pi0m0"]
background_mode = 2
sky = SubResource("Sky_noqmy")
tonemap_mode = 2
fog_density = 0.001
fog_sky_affect = 0.0

[sub_resource type="PlaneMesh" id="PlaneMesh_a8whk"]
size = Vector2(100, 100)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ym5vi"]
shading_mode = 2
albedo_color = Color(0.882353, 0.882353, 0.882353, 1)
albedo_texture = ExtResource("6_idf5b")
uv1_scale = Vector3(100, 100, 1)
texture_filter = 5

[sub_resource type="BoxShape3D" id="BoxShape3D_trsr2"]
size = Vector3(100, 1, 100)

[sub_resource type="BoxMesh" id="BoxMesh_mf2fd"]
size = Vector3(5, 3, 0.2)

[sub_resource type="BoxShape3D" id="BoxShape3D_7v3es"]
size = Vector3(5.05884, 3.02182, 0.229645)

[sub_resource type="BoxMesh" id="BoxMesh_fpl56"]
size = Vector3(5, 3, 0.1)
subdivide_width = 1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jqgkb"]
albedo_color = Color(0.980392, 0.756863, 0.403922, 1)

[sub_resource type="Animation" id="Animation_lpwpk"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hinge:rotation:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1.5708, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_oayv1"]
resource_name = "door_open"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hinge:rotation:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 3.0456, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.6)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8h4ft"]
_data = {
"RESET": SubResource("Animation_lpwpk"),
"door_open": SubResource("Animation_oayv1")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_laleu"]
size = Vector3(4.93371, 3.13013, 0.730208)

[sub_resource type="BoxShape3D" id="BoxShape3D_pv6da"]
size = Vector3(1, 2.99994, 0.10083)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ts01c"]
albedo_color = Color(0.937255, 0, 0.937255, 1)
albedo_texture = ExtResource("9_30ele")
uv1_scale = Vector3(10, 10, 10)

[sub_resource type="BoxMesh" id="BoxMesh_qei3g"]
material = SubResource("StandardMaterial3D_ts01c")
size = Vector3(1, 3, 1)

[node name="Main" type="Node3D"]
script = ExtResource("1_xecma")

[node name="GameController" type="Node3D" parent="."]
script = ExtResource("2_42an5")

[node name="wall_template" type="CSGMesh3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 0.1, 0, 1.505, 0)
visible = false
mesh = SubResource("BoxMesh_b2ccx")

[node name="XRUser" type="Area3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 8)
script = ExtResource("2_kvn2k")

[node name="CollisionShape3D" type="CollisionShape3D" parent="XRUser"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)
shape = SubResource("BoxShape3D_nj0ms")
script = ExtResource("5_dknlb")

[node name="XROrigin3D" type="XROrigin3D" parent="XRUser"]

[node name="XRCamera3D" type="XRCamera3D" parent="XRUser/XROrigin3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)
far = 500.0

[node name="LeftController" type="XRController3D" parent="XRUser/XROrigin3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.25, 1.4, -0.4)
tracker = &"left_hand"
pose = &"aim"

[node name="LeftControllerMesh" parent="XRUser/XROrigin3D/LeftController" instance=ExtResource("3_y2kpf")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0.05)

[node name="RightController" type="XRController3D" parent="XRUser/XROrigin3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 1.4, -0.4)
tracker = &"right_hand"
pose = &"aim"

[node name="RightControllerMesh" parent="XRUser/XROrigin3D/RightController" instance=ExtResource("4_5ti0a")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0.05)

[node name="LeftHip" type="Node3D" parent="XRUser/XROrigin3D"]
unique_name_in_owner = true

[node name="RightHip" type="Node3D" parent="XRUser/XROrigin3D"]
unique_name_in_owner = true

[node name="OmniLight3D" type="OmniLight3D" parent="XRUser"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
light_energy = 2.0

[node name="Map" type="Node3D" parent="."]
transform = Transform3D(0.05, 0, 0, 0, 0.0392875, -0.0309273, 0, 0.0309273, 0.0392875, 1.70429, 1.43416, 3.93306)
script = ExtResource("8_ct64q")

[node name="Room1" type="MeshInstance3D" parent="Map"]
visible = false
mesh = SubResource("BoxMesh_yr38u")
surface_material_override/0 = SubResource("StandardMaterial3D_stxle")

[node name="GhostRoom1" type="MeshInstance3D" parent="Map"]
visible = false
mesh = SubResource("BoxMesh_ku1ag")
surface_material_override/0 = SubResource("StandardMaterial3D_7o7er")

[node name="Paths" type="MultiMeshInstance3D" parent="Map"]
multimesh = SubResource("MultiMesh_8l6sb")

[node name="Corners" type="MultiMeshInstance3D" parent="Map"]
multimesh = SubResource("MultiMesh_saubh")

[node name="Cursor" type="Node3D" parent="Map"]

[node name="Ball" type="MeshInstance3D" parent="Map/Cursor"]
mesh = SubResource("SphereMesh_td3q0")
surface_material_override/0 = SubResource("StandardMaterial3D_88qy7")

[node name="Laser" type="MeshInstance3D" parent="Map/Cursor"]
mesh = SubResource("BoxMesh_t47kd")
surface_material_override/0 = SubResource("StandardMaterial3D_srtc7")

[node name="Background" type="MeshInstance3D" parent="Map"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 5, 0)
mesh = SubResource("PlaneMesh_5j7vv")
surface_material_override/0 = SubResource("StandardMaterial3D_r55n5")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_pi0m0")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866024, -0.433016, 0.250001, 0, 0.499998, 0.866026, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="Ground" type="StaticBody3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("PlaneMesh_a8whk")
surface_material_override/0 = SubResource("StandardMaterial3D_ym5vi")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("BoxShape3D_trsr2")

[node name="ROOM" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 37.9211, 9.53674e-07, -37.5085)
visible = false

[node name="Wall" type="Node3D" parent="ROOM"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.02647, 0, -4.20987)

[node name="CSGMesh3D" type="CSGMesh3D" parent="ROOM/Wall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.51134, 1.50505, 0.0689712)
mesh = SubResource("BoxMesh_mf2fd")

[node name="Area3D" type="Area3D" parent="ROOM/Wall" groups=["enemy"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="ROOM/Wall/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.48587, 1.4914, 0.0678172)
shape = SubResource("BoxShape3D_7v3es")

[node name="Wall2" type="Node3D" parent="ROOM"]
transform = Transform3D(-8.74228e-08, 0, -1, 0, 1, 0, 2, 0, -4.37114e-08, 7.2178, 0, -4.26919)

[node name="CSGMesh3D" type="CSGMesh3D" parent="ROOM/Wall2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.51134, 1.50505, 0.0689712)
mesh = SubResource("BoxMesh_mf2fd")

[node name="Area3D" type="Area3D" parent="ROOM/Wall2" groups=["enemy"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="ROOM/Wall2/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.53287, 1.4914, 0.0726237)
shape = SubResource("BoxShape3D_7v3es")

[node name="Wall3" type="Node3D" parent="ROOM"]
transform = Transform3D(-3, 0, -1.50996e-07, 0, 1, 0, 4.52987e-07, 0, -1, 7.2629, 0, 5.91183)

[node name="CSGMesh3D" type="CSGMesh3D" parent="ROOM/Wall3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.51134, 1.50505, 0.0689712)
mesh = SubResource("BoxMesh_mf2fd")

[node name="Area3D" type="Area3D" parent="ROOM/Wall3" groups=["enemy"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="ROOM/Wall3/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.48587, 1.4914, 0.0678172)
shape = SubResource("BoxShape3D_7v3es")

[node name="Wall4" type="Node3D" parent="ROOM"]
transform = Transform3D(-8.74228e-08, 0, -1, 0, 1, 0, 2, 0, -4.37114e-08, -7.7822, 0, -4.26919)

[node name="CSGMesh3D" type="CSGMesh3D" parent="ROOM/Wall4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.51134, 1.50505, 0.0689712)
mesh = SubResource("BoxMesh_mf2fd")

[node name="Area3D" type="Area3D" parent="ROOM/Wall4" groups=["enemy"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="ROOM/Wall4/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.53287, 1.4914, 0.0726237)
shape = SubResource("BoxShape3D_7v3es")

[node name="Wall5" type="Node3D" parent="ROOM"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.97353, 0, -4.20987)

[node name="CSGMesh3D" type="CSGMesh3D" parent="ROOM/Wall5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.51134, 1.50505, 0.0689712)
mesh = SubResource("BoxMesh_mf2fd")

[node name="Area3D" type="Area3D" parent="ROOM/Wall5" groups=["enemy"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="ROOM/Wall5/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.48587, 1.4914, 0.0678172)
shape = SubResource("BoxShape3D_7v3es")

[node name="Door" type="Node3D" parent="ROOM"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.74019, 4.76837e-07, -4.14731)
script = ExtResource("6_dubqk")

[node name="Hinge" type="Node3D" parent="ROOM/Door"]
transform = Transform3D(-3.61999e-06, 0, 1, 0, 1, 0, -1, 0, -3.61999e-06, -0.40354, 0, 0.0130472)

[node name="CSGMesh3D" type="CSGMesh3D" parent="ROOM/Door/Hinge"]
transform = Transform3D(0.999999, 0, 0, 0, 1, 0, 0, 0, 0.999999, 2.24722, 1.47971, -0.0214872)
mesh = SubResource("BoxMesh_fpl56")
material = SubResource("StandardMaterial3D_jqgkb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="ROOM/Door"]
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_8h4ft")
}

[node name="Area3D" type="Area3D" parent="ROOM/Door"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="ROOM/Door/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.26077, 1.57312, 0.360933)
shape = SubResource("BoxShape3D_laleu")

[node name="Path" type="Node3D" parent="."]
script = ExtResource("7_ctd0p")

[node name="door_template" type="Area3D" parent="."]
unique_name_in_owner = true
visible = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="door_template"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.50436, -0.00012207)
shape = SubResource("BoxShape3D_pv6da")

[node name="door_template_mesh" type="CSGMesh3D" parent="door_template"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 0.1, 0, 1.495, 0)
mesh = SubResource("BoxMesh_qei3g")

[connection signal="area_entered" from="XRUser" to="GameController" method="_on_xr_user_area_entered"]
[connection signal="area_exited" from="XRUser" to="GameController" method="_on_xr_user_area_exited"]
[connection signal="button_pressed" from="XRUser/XROrigin3D/LeftController" to="XRUser" method="button_pressed"]
[connection signal="button_pressed" from="XRUser/XROrigin3D/LeftController" to="Map" method="_on_left_controller_button_pressed"]
[connection signal="input_vector2_changed" from="XRUser/XROrigin3D/LeftController" to="XRUser" method="process_input"]
[connection signal="button_pressed" from="XRUser/XROrigin3D/RightController" to="XRUser" method="button_pressed"]
[connection signal="button_pressed" from="XRUser/XROrigin3D/RightController" to="Map" method="_on_right_controller_button_pressed"]
[connection signal="input_vector2_changed" from="XRUser/XROrigin3D/RightController" to="XRUser" method="process_input"]
